--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,13 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "forceConsistentCasingInFileNames": true,
-    "typeRoots": ["src/types", "./node_modules/@types"],
+    "typeRoots": ["src/server/types", "./node_modules/@types"],
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "module": "CommonJS",
     "target": "ES2020",
     "moduleResolution": "node",
   },
-  "include": ["src/**/*", "src/types/**/*"],
+  "include": ["src/**/*", "src/server/types/**/*"],
   "exclude": ["node_modules", "dist"]
 }
