--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "bartoc-search",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --config nodemon.json",
@@ -23,25 +24,31 @@
     "@types/lodash": "^4.17.16",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.14.0",
-    "axios": "^1.8.4",
-    "dotenv": "^16.4.7",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-prettier": "^5.2.6",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
-    "lodash": "^4.17.21",
     "mongodb": "^6.15.0",
-    "mongoose": "^8.13.2",
-    "nodemon": "^3.1.9",
-    "portfinder": "^1.0.35",
+    "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
     "ts-jest": "^29.3.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.1",
-    "zod": "^3.24.2"
+    "@types/compression": "^1.7.5",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "axios": "^1.9.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.5.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^8.14.3",
+    "portfinder": "^1.0.37",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.4",
+    "typescript": "~5.7.3",
+    "vite": "^6.1.1",
+    "vue-tsc": "^2.2.2",
+    "zod": "^3.24.4"
   },
   "overrides": {
     "eslint": "^9.24.0"
@@ -49,6 +56,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "compression": "^1.8.0",
+    "sirv": "^3.0.1",
+    "vue": "^3.5.13"
   }
 }
