--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - ../:/usr/src/app
       - /usr/src/app/node_modules
+    network_mode: host
     ports:
       - "3000:3000"
     depends_on:
