--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,9 +2,8 @@ name: Publish Docker
 on:
   push:
     branches:
-      - master
+      - main
       - dev
-      - test
     tags:
       - 'v*'
     paths-ignore:
