--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon --config nodemon.json",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "lint": "eslint",
     "live:seed": "npx ts-node ./src/data/seedTerminologies.ts"
   },
