--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint",
-    "live:seed": "npx ts-node ./src/data/seedTerminologies.ts"
+    "lint-staged": "lint-staged",
+    "live:seed": "npx ts-node ./src/data/seedTerminologies.ts",
+    "prepare": "husky || true"
   },
   "keywords": [],
   "author": "",
@@ -19,34 +21,36 @@
     "@eslint/js": "^9.24.0",
     "@faker-js/faker": "^9.7.0",
     "@tsconfig/node20": "^20.1.5",
+    "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.14.0",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "axios": "^1.9.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.5.0",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-prettier": "^5.2.6",
     "globals": "^16.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "lint-staged": "^16.0.0",
+    "lodash": "^4.17.21",
     "mongodb": "^6.15.0",
+    "mongoose": "^8.14.3",
     "nodemon": "^3.1.10",
+    "portfinder": "^1.0.37",
     "prettier": "^3.5.3",
     "ts-jest": "^29.3.1",
-    "typescript-eslint": "^8.29.1",
-    "@types/compression": "^1.7.5",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "axios": "^1.9.0",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.5.0",
-    "lodash": "^4.17.21",
-    "mongoose": "^8.14.3",
-    "portfinder": "^1.0.37",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
     "typescript": "~5.7.3",
+    "typescript-eslint": "^8.29.1",
     "vite": "^6.1.1",
     "vue-tsc": "^2.2.2",
     "zod": "^3.24.4"
@@ -55,10 +59,10 @@
     "eslint": "^9.24.0"
   },
   "dependencies": {
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "morgan": "^1.10.0",
-    "compression": "^1.8.0",
     "sirv": "^3.0.1",
     "vue": "^3.5.13"
   }
