Change name of the queue (#12)

--- a/config/config.default.json
+++ b/config/config.default.json
@@ -6,7 +6,7 @@
   "port": 3883,
   "proxies": [],
   "queues": {
-    "solrQueue": {
+    "terminologiesQueue": {
       "concurrency": 10
     }
   },
