change name of core, now in config (#12)

--- a/config/config.default.json
+++ b/config/config.default.json
@@ -19,7 +19,8 @@
     "port": 6379
   },
   "solr": {
-    "batch_size": 500,
+    "batchSize": 500,
+    "coreName": "terminologies",
     "host": "solr",
     "port": 8983,
     "version": 8.1
