--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "typescript": "~5.7.3",
     "typescript-eslint": "^8.29.1",
     "vite": "^6.1.1",
+    "vue-router": "^4.5.1",
     "vue-tsc": "^1.6.5",
     "ws": "^8.18.2",
     "zod": "^3.24.4"
