Refactor update docu (#28)
* Clean up (#18)

* Implement Robust redis and queue workflow; add docu (#18)

* Refine docu (#18)

* Implement strategy for websocket both localhost/docker (#18)

* Add docu about jskos-server instance (#18)

* Delete generator of fake data (#18)

* Update architecture diagram and review documentation (#18)

* Update documentation (#18)

* add docu about queue board in README (#18)

--- a/config/config.default.json
+++ b/config/config.default.json
@@ -15,6 +15,9 @@
   },
   "redis": {
     "host": "redis",
+    "pingTimeout": 10000,
+    "pingRetries": 5,
+    "pingRetryDelay": 1000,
     "port": 6379
   },
   "solr": {
@@ -29,5 +32,13 @@
   },
   "title": "Search for Bartoc",
   "verbosity": "log",
-  "version": null
+  "version": null,
+  "webSocket": {
+    "host": "wss://coli-conc.gbv.de/dev-api",
+    "port": 443,
+    "path": "/voc/changes",
+    "pingTimeout": 10000,
+    "pingRetries": 5,
+    "pingRetryDelay": 1000
+  }
 }
