--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -33,15 +33,13 @@ services:
     container_name: bartoc-solr
     ports:
       - "8983:8983"
-    environment:
-      - SOLR_CORE_NAME=${SOLR_CORE_NAME}
     volumes:
       - solr_data:/var/solr
-      - ./solr-config/${SOLR_CORE_NAME}-configset:/configsets/${SOLR_CORE_NAME}-configset
+      - ./solr-config/terminologies-configset:/configsets/terminologies-configset
     command:
       - solr-precreate
-      - ${SOLR_CORE_NAME}
-      - /configsets/${SOLR_CORE_NAME}-configset
+      - terminologies
+      - /configsets/terminologies-configset
 
 volumes:
   solr_data:
