--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,13 @@ node_modules/
 # Production build output (Vite build)
 dist/
 
+
 # TypeScript build artifacts
 *.js
 *.js.map
+
+# ...except for those inside src/client
+!src/client/**/*.js
 
 # Temporary files
 tmp/
