--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint",
+    "fix": "eslint --fix",
+    "lint:server": "eslint \"src/server/**/*.{js,ts}\" --config src/server/eslint.config.mjs",
     "live:seed": "npx ts-node ./src/data/seedTerminologies.ts",
     "prepare": "husky || true"
   },
@@ -36,9 +38,9 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "eslint": "^9.24.0",
-    "eslint-config-prettier": "^10.1.2",
+    "eslint-config-gbv": "^2.6.0",
     "eslint-plugin-jest": "^28.11.0",
-    "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-vue": "^10.3.0",
     "express-ws": "^5.0.2",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
@@ -47,7 +49,6 @@
     "lodash": "^4.17.21",
     "nodemon": "^3.1.10",
     "portfinder": "^1.0.37",
-    "prettier": "^3.5.3",
     "ts-jest": "^29.3.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
@@ -55,7 +56,6 @@
     "typescript-eslint": "^8.29.1",
     "vite": "^6.1.1",
     "vue-router": "^4.5.1",
-    "vue-tsc": "^1.6.5",
     "ws": "^8.18.2",
     "zod": "^3.24.4"
   },
