--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,9 @@ jobs:
 
       - name: Run linter
         run: npm run lint
+      
+      - name: Run linter Server
+        run: npm run lint:server
 
       - name: Run tests
         run: npm test 
