Peculiar linting on server side

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:coverage": "jest --coverage",
     "lint": "npm run fix && npm run lint:server",
     "fix": "eslint --fix",
-    "lint:server": "tsc --noEmit --project tsconfig.json && eslint \"src/server/**/*.{js,ts}\" --config src/server/eslint.config.mjs",
+    "lint:server": "tsc --noEmit --project tsconfig.json && eslint --fix \"src/server/**/*.{js,ts}\" --config src/server/eslint.config.mjs",
     "live:seed": "npx ts-node ./src/data/seedTerminologies.ts",
     "prepare": "husky || true"
   },
