--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jskos-vue": "^0.3.18",
     "morgan": "^1.10.0",
     "sirv": "^3.0.1",
     "vue": "^3.5.13"
