--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "lodash": "^4.17.21",
     "nodemon": "^3.1.10",
     "portfinder": "^1.0.37",
+    "qs": "^6.14.0",
     "ts-jest": "^29.3.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
@@ -67,6 +68,7 @@
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jskos-vue": "^0.3.18",
     "morgan": "^1.10.0",
     "sirv": "^3.0.1",
     "vue": "^3.5.13"
