--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "jest": "^29.7.0",
     "jskos-tools": "^1.0.43",
     "lodash": "^4.17.21",
+    "namespace-lookup": "^0.2.1",
     "nodemon": "^3.1.10",
     "portfinder": "^1.0.37",
     "qs": "^6.14.0",
@@ -69,6 +70,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jskos-vue": "^0.3.18",
+    "namespace-lookup": "^0.2.1",
     "morgan": "^1.10.0",
     "sirv": "^3.0.1",
     "vue": "^3.5.13"
