--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,6 +17,9 @@ services:
       - CONFIG_FILE=./config/config.json
       - __VITE_ADDITIONAL_SERVER_ALLOWED_HOSTS=.coli-conc.gbv.de
       - BASE_URL=http://localhost:3883/
+      # updater/indexer envs
+      - DATA_DIR=/usr/src/app/data
+      - BARTOC_NDJSON_URL=https://bartoc.org/data/dumps/latest.ndjson
     working_dir: /usr/src/app
 
   redis:
