Populate data from bartoc (#78)
* WIP going through files in data folder (#66)

* WIP Refactor data folder approach (#66)

* Delete class disabled as inconsinstent (#54)

* Refactor after request changes (#54)

* Update README (#66)

* Run updates at server start (#66)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,5 +17,6 @@ COPY . .
 # Expose to port 3883
 EXPOSE 3883
 
-# Command to run
+# Start: run updater once, then dev server.
+# Alpine uses /bin/sh; chaining is via -lc.
 CMD ["npm", "run" , "dev"]
