--- a/docker/docker-compose-backends.yml
+++ b/docker/docker-compose-backends.yml
@@ -1,4 +1,4 @@
-# Local backend services required to run bartoc-search
+# Local backend services required to run bartoc-search without persisting volumes
 # Additional backend service jskos-server is optional!
 
 services:
@@ -8,8 +8,6 @@ services:
     ports:
       - "6379:6379"
     restart: always
-    volumes:
-      - redis_data:/data
 
   solr:
     image: solr:8
@@ -17,13 +15,8 @@ services:
     ports:
       - "8983:8983"
     volumes:
-      - solr_data:/var/solr
       - ./solr-config/terminologies-configset:/configsets/terminologies-configset
     command:
       - solr-precreate
       - terminologies
       - /configsets/terminologies-configset
-
-volumes:
-  solr_data:
-  redis_data:
