--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --config nodemon.json",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "vitest run",
+    "test:cov": "vitest run --coverage",
+    "test:watch": "vitest",
     "lint": "npm run fix && npm run lint:server",
     "fix": "eslint --fix",
     "lint:server": "tsc --noEmit --project tsconfig.json && eslint --fix \"src/server/**/*.{js,ts}\" --config src/server/eslint.config.mjs",
@@ -29,35 +29,35 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/express-ws": "^3.0.5",
-    "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.16",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.14.0",
+    "@types/supertest": "^6.0.3",
     "@types/ws": "^8.18.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "axios": "^1.9.0",
+    "c8": "^10.1.3",
     "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "eslint": "^9.24.0",
     "eslint-config-gbv": "^2.6.0",
-    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-vue": "^10.3.0",
     "express-ws": "^5.0.2",
     "globals": "^16.0.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0",
     "jskos-tools": "^1.0.43",
     "lodash": "^4.17.21",
     "namespace-lookup": "^0.2.1",
     "nodemon": "^3.1.10",
     "portfinder": "^1.0.37",
     "qs": "^6.14.0",
-    "ts-jest": "^29.3.1",
+    "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
     "typescript": "~5.7.3",
     "typescript-eslint": "^8.29.1",
     "vite": "^6.1.1",
+    "vitest": "^3.2.4",
     "vue-router": "^4.5.1",
     "ws": "^8.18.2",
     "zod": "^3.24.4"
@@ -71,8 +71,8 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jskos-vue": "^0.3.18",
-    "namespace-lookup": "^0.2.1",
     "morgan": "^1.10.0",
+    "namespace-lookup": "^0.2.1",
     "sirv": "^3.0.1",
     "vue": "^3.5.13"
   }
