--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^16.5.0",
     "eslint": "^9.24.0",
     "eslint-config-gbv": "^2.6.0",
+    "eslint-plugin-jest": "^29.0.1",
     "eslint-plugin-vue": "^10.3.0",
     "express-ws": "^5.0.2",
     "globals": "^16.0.0",
