--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,8 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "strictPropertyInitialization": true,
+
+    "types": ["node", "vitest/globals"]
   },
   "include": ["src/server/**/*", "src/tests/**/*", "src/**/*.d.ts", "tsconfig.node.json"],
   "exclude": ["src/client/**/*"],
