--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@bull-board/express": "^6.10.1",
     "@eslint/js": "^9.24.0",
     "@faker-js/faker": "^9.7.0",
+    "@testcontainers/mongodb": "^11.7.1",
     "@tsconfig/node20": "^20.1.5",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
@@ -31,7 +32,7 @@
     "@types/express-ws": "^3.0.5",
     "@types/lodash": "^4.17.16",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.18.12",
     "@types/supertest": "^6.0.3",
     "@types/ws": "^8.18.1",
     "@vitejs/plugin-vue": "^5.2.1",
@@ -53,6 +54,7 @@
     "portfinder": "^1.0.37",
     "qs": "^6.14.0",
     "supertest": "^7.1.4",
+    "testcontainers": "^11.7.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
     "typescript": "~5.7.3",
