--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - ../:/usr/src/app
       - /usr/src/app/node_modules
+      - ../config/cron:/config/cron:ro
     ports:
       - "3883:3883"     # HTTP
       - "24678:24678"   # HMR WebSocket
