Several changes towards the release to prod

--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "bartoc-search",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --config nodemon.json",
+    "build:client": "vite build",
+    "build:ssr": "vite build --ssr src/client/entry-server.js --outDir dist/server",
+    "build": "npm run build:client && npm run build:ssr",
+    "start:prod": "cross-env NODE_ENV=production DISABLE_WORKERS=1 tsx ./src/server/start-prod.ts",
+    "start:prod:local": "cross-env NODE_ENV=production DISABLE_WORKERS=1 SOLR_HOST=localhost SOLR_PORT=8983 tsx ./src/server/start-prod.ts",
     "test": "vitest run",
     "test:cov": "vitest run --coverage",
     "test:watch": "vitest",
