Fix parsing based on new validation approach

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/express-ws": "^3.0.5",
+    "@types/jsonschema": "^0.0.5",
     "@types/lodash": "^4.17.16",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.18.12",
@@ -88,7 +89,6 @@
     "express": "^5.1.0",
     "feather-icons": "^4.29.2",
     "jskos-vue": "^0.3.18",
-    "json-schema": "^0.4.0",
     "jsonschema": "^1.5.0",
     "morgan": "^1.10.0",
     "namespace-lookup": "^0.2.1",
