--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -64,3 +64,5 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            VIRTUAL_PATH=/vocabularies/
